--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_post-messages.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_post-messages.scss
@@ -53,11 +53,12 @@
     padding: $gridRowGap;
 
     .pm__header {
-      display:flex;
+      display: grid;
+      grid-template-columns: auto 1fr auto;
       grid-area: header;
       font-size: $normalFontSize;
       text-align: left;
-      width: 100%;
+      min-width: 0;
 
       &__icon {
         @include fixed-square($postIconSize);
